--- a/css/common.css
+++ b/css/common.css
@@ -15,7 +15,7 @@ body {
 
 button {
 
-background-color: #3498db; /* Initial background color */
+background-color: #4E75FF; /* Initial background color */
   color: white; /* Initial text color */
   border: none;
   padding: 10px 20px;
