--- a/css/common.css
+++ b/css/common.css
@@ -18,8 +18,9 @@ button {
 background-color: #4E75FF; /* Initial background color */
   color: white; /* Initial text color */
   border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
+  padding: 8px 16px 8px 16px;
+  gap: 10px;
+  border-radius: 8px;
+ width: 86px;
+ height: 40px;
 }
