--- a/css/common.css
+++ b/css/common.css
@@ -15,14 +15,24 @@ body {
 
 button {
 
-background-color: #4E75FF; /* Initial background color */
-  color: white; /* Initial text color */
+  
+background-color: #4E75FF; 
+  color: white; 
   border: none;
   padding: 8px 16px 8px 16px;
   gap: 10px;
   border-radius: 8px;
  width: 86px;
  height: 40px;
+
+ font-family: Montserrat;
+ font-size: 12px;
+ font-weight: 500;
+ line-height: 24px;
+ letter-spacing: 0.04em;
+ text-align: left;
+ 
+ 
 }
 
 button:hover {
@@ -39,4 +49,19 @@ button.task-6 {
 button.task-6:hover {
   background: #FF7070;
 
+}
+
+.login-form input {
+  padding: 10px;
+  border: 1px solid;
+  border-radius: 5px;
+  font-size: 14px;
+  outline: none;
+  width: 360px;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+ 
+  
 }
